--- a/pom.xml
+++ b/pom.xml
@@ -94,8 +94,24 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version> <!-- Check for the latest version -->
+            </plugin>
         </plugins>
+
+
+
+
+
+
     </build>
+
 
 
 </project>
